fixed missing padding in top action bar

--- a/views/scss/inc/_test-action-bars.scss
+++ b/views/scss/inc/_test-action-bars.scss
@@ -87,6 +87,9 @@
                 -ms-flex-pack: space-between;
                 justify-content: space-between;
 
+                padding-left: 10px;
+                padding-right: 10px;
+
                 .title-box {
                     @include font-size(14);
                     padding: 4px 0 0;
